--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,3 @@
 ddemake: ddec.c
-	gcc -I.. -g -D__cminpack_long_double__ -shared -Wl,-soname,ddec -o ddec.so -fPIC ddec.c /usr/local/lib/libcminpackld.a  -lm
+	gcc -I.. -g  -shared -Wl,-soname,ddec -o ddec.so -fPIC ddec.c /usr/local/lib/libcminpack.a  -lm
 
